--- a/index.html
+++ b/index.html
@@ -1359,8 +1359,8 @@
     <footer>
         <div class="container">
             <div class="social-links mb-4">
-                <a href="https://linkedin.com" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/anushabhutam" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/AnushaBhutham/" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                 <a href="mailto:anushabhutam1@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
                 <a href="tel:+14705038352" title="Phone"><i class="fas fa-phone"></i></a>
             </div>
